--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
         </div>
     </div>
 
-    <div onclick="restart()"  class="button">
-        RESTART GAME
+    <div id="gameOverPage">        
+
     </div>
 
-    </button>
     <script src="./scripts/game.js"></script>
     <script src="./scripts/interface.js"></script>
 </body>
